// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charge AfterContent should aggregate line_items by subscriptions 1`] = `
<div>
  <div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        <span
          aria-label="subscription emoji"
          role="img"
        >
          🔄
        </span>
         
        Subscription #
        1
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        foo
         (
        7
        )
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        bar
         (
        5
        )
      </span>
    </div>
  </div>
  <div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        <span
          aria-label="subscription emoji"
          role="img"
        >
          🔄
        </span>
         
        Subscription #
        2
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        baz
         (
        1
        )
      </span>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-cec3"
      data-name="multi-button"
      data-size="small"
      data-variant="primary"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-3"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          attach_money
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-3-tooltip-target"
          />
          Refund
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-cec3"
      data-name="multi-button"
      data-size="small"
      data-variant="primary"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-4"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          attach_money
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-4-tooltip-target"
          />
          Refund
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-cec3"
      data-name="multi-button"
      data-size="small"
      data-variant="primary"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-5"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          attach_money
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-5-tooltip-target"
          />
          Refund
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-cec3"
      data-name="multi-button"
      data-size="small"
      data-variant="primary"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-6"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          attach_money
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-6-tooltip-target"
          />
          Refund
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should not display the refund action when the status is not SUCCESS or PARTIALLY_REFUNDED 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 2`] = `<div />`;

exports[`Charge BeforeContent should display default color if there's no matching status 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Status
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="default"
        data-corner="round"
        data-name="badge"
      >
        Foobar
      </div>
    </span>
  </div>
</div>
`;

exports[`Charge BeforeContent should display the appropriate color if there's a matching status 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Status
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="red"
        data-corner="round"
        data-name="badge"
        data-type="error"
      >
        Error
      </div>
    </span>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the skipCharge action if the charge is queued 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-cec3"
      data-name="multi-button"
      data-size="small"
      data-variant="primary"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-1"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          block
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-1-tooltip-target"
          />
          Skip
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the unskipCharge action if the charge is skipped 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-cec3"
      data-name="multi-button"
      data-size="small"
      data-variant="primary"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-2"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          autorenew
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-2-tooltip-target"
          />
          Unskip
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should not display any action if the charge is nor queued nor skipped 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if isEditing 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if there's no integrationId 1`] = `<div />`;

exports[`Charge TitleWrapper customer context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper customer context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any link because no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any provided link when no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;
